--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     
     <body>
-        <h1>Under Construction New</h1>
+        <h1>Under Construction New!</h1>
         <h2>Test from swoosh</h2>
     </body>
 
